[tool.poetry]
name = "nappower"
version = "0.1.0"
description = ""
authors = ["baba5246 <baba_writer@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
